--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-hi hi hi hi
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-compatible" content="ie=edge">
+
+    <link rel="stylesheet" href="style.css">
+
+    <title>Science Labs</title>
+    <meta name="description" content="learn and test your knowledge of science">
+
+</head>
+
+
+<body>
+    <h1> science</h1>
+</body>
