--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Science Labs</title>
-    <meta name="description" content="learn and test your knowledge of science">
+    <title>Element Labs</title>
+    <meta name="description" content="learn and test your knowledge of elements">
 
 </head>
 
