--- a/index.html
+++ b/index.html
@@ -7,49 +7,23 @@
     <meta http-equiv="X-UA-compatible" content="ie=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="navbar/navStyle.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <title>Element Labs</title>
     <meta name="description" content="learn and test your knowledge of elements">
-
 </head>
 
 
 <body>
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light">
+  <div id="nav-placeholder"></div>
+  <script>
+    $(function(){
+      $("#nav-placeholder").load("navbar/nav.html");
+    });
+  </script>
 
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img class="logo" src="Img/Logo.PNG" alt="Element Labs logo">
-          Element Labs</a>
-        
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" 
-        aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="collapse navbar-collapse" id="toggleMobileMenu"> 
-          <div class="wrapperMid ms-auto">
-            <ul class="navbar-nav">
-              <li><a class="nav-link" href="#">Home</a></li>
-              <li><a class="nav-link" href="#">Lessons</a></li>
-              <li><a class="nav-link" href="#">About</a></li>
-            </ul>
-          </div>
-          <div class="wrapperRight ms-auto">
-            <ul class="navbar-nav">
-              <li><a class="nav-link" href="#">Login</a></li>
-              <li><a class="nav-link" href="#">Sign Up</a></li>
-            </ul>
-          </div>
-        </div>
-
-      </div>
-    </nav>
-  </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" 
-  integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+  
+  <p> hello </p>
 </body>
