--- a/lessons.html
+++ b/lessons.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
@@ -8,23 +5,23 @@
     <link rel="icon" href="images/favicon.PNG">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index_style.css">
+    <link rel="stylesheet" href="css/lesson_style.css">
     <link rel="stylesheet" href="navbar/nav_style.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
-    <title>Learn Chemistry | ElementLabs</title>
+    <title>Chemistry Lessons | ElementLabs</title>
     <meta name="description" content="learn and test your knowledge of elements">
 </head>
 
-
 <body>
-  <div id="nav-placeholder"></div>
-  <script>
-    $(function(){
-      $("#nav-placeholder").load("navbar/nav.html");
-    });
-  </script>
-
+    <div id="nav-placeholder"></div>
+    <script>
+      $(function(){
+        $("#nav-placeholder").load("navbar/nav.html");
+      });
+    </script>
   
-  <p> home </p>
+    
+    <p> lessons </p>
+
 </body>
