--- a/navbar/nav.html
+++ b/navbar/nav.html
@@ -3,8 +3,8 @@
     <nav class="navbar navbar-expand-lg navbar-light">
 
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img class="logo" src="Img/Logo.PNG" alt="Element Labs logo">
+        <a class="navbar-brand" href="index.html">
+          <img class="logo" src="images/logo.PNG" alt="Element Labs logo">
           Element Labs</a>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -16,9 +16,9 @@
         <div class="collapse navbar-collapse" id="toggleMobileMenu"> 
           <div class="wrapperMid ms-auto">
             <ul class="navbar-nav">
-              <li><a class="nav-link" href="#">Home</a></li>
-              <li><a class="nav-link" href="#">Lessons</a></li>
-              <li><a class="nav-link" href="#">About</a></li>
+              <li><a class="nav-link" href="index.html">Home</a></li>
+              <li><a class="nav-link" href="lessons.html">Lessons</a></li>
+              <li><a class="nav-link" href="about.html">About</a></li>
             </ul>
           </div>
           <div class="wrapperRight ms-auto">
