--- a/login.html
+++ b/login.html
@@ -4,18 +4,96 @@
         <title>Login and registration Form</title>
     </head>
     <style>
+        body{
+            background-color: greenyellow;
+            background-size: cover;
+            background-position: center;
+        }
+        .login-page{
+            width: 360px;
+            padding: 10% 0 0;
+            margin: auto;
+        }
+
+        .form{
+            position: relative;
+            z-index: 1;
+            background:#ffffff;
+            max-width: 360px;
+            margin:0 auto 100px;
+            padding: 45px;
+            text-align: center;
+        }
+        .form input {
+            font-family: "Roboto", sans-serif;
+            outline: 1;
+            background: #f2f2f2;
+            width:100%;
+            border:0;
+            margin: 0 0 15px;
+            padding:15px;
+            box-sizing:border-box;
+            font-size: 14px;
+        }
+
+        .form button {
+            font-family: "Roboto",sans-serif;
+            text-transform: uppercase;
+            outline:0;
+            background: #4CAF50;
+            width: 100%;
+            border:0;
+            padding:15px;
+            color:#FFFFFF;
+            font-size: 14px;
+            cursor:pointer;
+        }
+
+        .form button:hover,.form button:active{
+            background:#43A047;
+        }
+
+        .form .message{
+            margin:15px 0 0 ;
+            color: black;
+            font-size: 12px;
+        }
+
+        .form .message a{
+            color:#4CAF50;
+            text-decoration: none;
+        }
+
+        .form .register-form{
+            display: none;
+        }
 
     </style>
     <body>
         <div class ="login-page">
         <div class ="form">
             <form class = "register-form">
-                <input type = "text" placeholder="user name"/>
-                <input type ="text" placeholder="password"/>
-                <input type ="text" placeholder="email"/>
+                <input type = "text" placeholder="User name"/>
+                <input type ="text" placeholder="Password"/>
+                <input type ="text" placeholder="Email"/>
                 <button>Create</button>
+                <p class = "message">Already Registered? <a href="#"> Login</a></p>
+            </form>
+
+            <form class="login-form">
+                <input type="text" placeholder="User name"/>
+                <input type="password" placeholder="Password"/>
+                <button>Login</button>
+                <p class="message">Not Registered? <a href="#">Register</a></p>
             </form>
         </div>
         </div>
+
+        <script src='http://code.jquery.com/jquery-3.2.1.min.js'></script>
+        <script>
+            $('.message a').click(function(){
+                $('form').animate({height:"toggle",opacity:"toggle"},"slow");
+            });
+        </script>
     </body>
 </html>
