--- a/login.html
+++ b/login.html
@@ -73,9 +73,9 @@
         <div class ="login-page">
         <div class ="form">
             <form class = "register-form">
-                <input type = "text" placeholder="User name"/>
-                <input type ="text" placeholder="Password"/>
-                <input type ="text" placeholder="Email"/>
+                <input id="username" type = "text" placeholder="User name"/>
+                <input id="password" type ="text" placeholder="Password"/>
+                <input id="email" type ="text" placeholder="Email"/>
                 <button>Create</button>
                 <p class = "message">Already Registered? <a href="#"> Login</a></p>
             </form>
