--- a/login.html
+++ b/login.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login and registration Form</title>
+        <meta charset="UTF-8">
+        <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-compatible" content="ie=edge">
+        <link rel="icon" href="images/favicon.PNG">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="css/login_style.css">
+        <link rel="stylesheet" href="navbar/nav_style.css">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    
+        <title>Login and Registration | ElementLabs</title>
+        <meta name="description" content="Sign up to save your progress on our quizes">
     </head>
 
     <body>
+        <div id="nav-placeholder"></div>
+        <script>
+            $(function(){
+            $("#nav-placeholder").load("navbar/nav.html");
+            });
+        </script>
+
         <div class ="login-page">
         <div class ="form">
             <form class = "register-form">
