--- a/navbar/nav.html
+++ b/navbar/nav.html
@@ -23,8 +23,7 @@
           </div>
           <div class="wrapperRight ms-auto">
             <ul class="navbar-nav">
-              <li><a class="nav-link" href="login.html">login</a></li>
-              <li><a class="nav-link" href="Register">Sign Up</a></li>
+              <li><a class="nav-link" href="login.html">Login/Sign up</a></li>
             </ul>
           </div>
         </div>
