--- a/lessons.html
+++ b/lessons.html
@@ -41,7 +41,7 @@
                 <span>question1</span>
               </div>
                           
-              <a href="#">Continue to Lesson</a>
+              <a href="Lesson1_Hydrogen.html">Continue to Lesson</a>
                           
              </div>
           </div>	 
