Cleaning up the Quiz code

--- a/Lesson1_Hydrogen.html
+++ b/Lesson1_Hydrogen.html
@@ -66,15 +66,14 @@
     </p>
 
     <!-- Creating the Quiz-->
-    <div id="quizCon">
+    <div>
         <button id="start" onclick="startQuiz()">Start Quiz!</button>
+
         <div id ="quiz" style ="display: none;">
-            <div id="questionNum"></div>
             <div id="question"></div>
             <div id="A" onclick="checkAnswerA()"></div>
             <div id="B" onclick="checkAnswerB()"></div>
             <div id="C" onclick="checkAnswerC()"></div>
-            <div id="score"></div>
         </div>
     </div>
     <script src="quiz.js"></script>
