Did some Styleing of the quiz may need some changes in the future, so that is meet our overall website design

--- a/Lesson1_Hydrogen.html
+++ b/Lesson1_Hydrogen.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-    <h1><b>Hydrogen</b></h1>
+    <div class="lessonHeader">
+        <h1><b>Hydrogen</b></h1>
+    </div>
     <table id ="id3">
         <tr>
             <td>Symbol</td>
@@ -41,32 +43,35 @@
             <td>Henry Cavendish in 1766</td>
         </tr>
     </table>
-
-    <p>
-        <h2 id = 'id'>Facts about Hydrogen</h2>
-        <ul id = 'id1'>
-            <li>Hydrogren is the lightest element on earth.</li>
-            <li>It consists of one proton and one eletron.</li>
-            <li>When Hydrogren and Oxygen come together that make water.</li>
-            <li>It makes up more than 90% of all elements in the universe.</li>
-            <li>Hydrogen gas is what makes up the stars that we see in the night sky. </li>
-            <li>Hydrogen makes up our sun.</li>
-            <li>At standard temperature and pressure hydrogren is a colorless, odorless, and tastless</li>
-            <li>Hydrogen is also used as a rocket fuel where liquid hydrogen is combined with liquid oxygen
-                to produce a powerful explosion. Scientists hope that someday hydrogen can be used as a 
-                clean fuel alternative to gasoline.</li>
-        </ul>
-    </p>
+    <div class="information" id="id4">
+        <p>
+            <h2 id = 'id'>Facts about Hydrogen</h2>
+            <ul id = 'id1'>
+                <li>Hydrogren is the lightest element on earth.</li>
+                <li>It consists of one proton and one eletron.</li>
+                <li>When Hydrogren and Oxygen come together that make water.</li>
+                <li>It makes up more than 90% of all elements in the universe.</li>
+                <li>Hydrogen gas is what makes up the stars that we see in the night sky. </li>
+                <li>Hydrogen makes up our sun.</li>
+                <li>At standard temperature and pressure hydrogren is a colorless, odorless, and tastless</li>
+                <li>Hydrogen is also used as a rocket fuel where liquid hydrogen is combined with liquid oxygen
+                    to produce a powerful explosion. Scientists hope that someday hydrogen can be used as a 
+                    clean fuel alternative to gasoline.</li>
+            </ul>
+        </p>
+    </div>
     
     <!-- Begining the quiz -->
-    <p id = "id2">
-        When your ready click the button below to take a test on the information you have 
-        learnt about hydrogen. The Quiz consistsof three multi choice question in which you
-        have 10 second to answer. Best of luck!!
-    </p>
+    <div class="message" id="id5">
+        <p id = "id2">
+            When your ready click the button below to take a test on the information you have 
+            learnt about hydrogen. The Quiz consistsof three multi choice question in which you
+            have 10 second to answer. Best of luck!!
+        </p>
+    </div>
 
     <!-- Creating the Quiz-->
-    <div>
+    <div class="quizDiv" id="quizDiv">
         <button id="start" onclick="startQuiz()">Start Quiz!</button>
 
         <div id ="quiz" style ="display: none;">
@@ -77,7 +82,7 @@
             <div id="score"></div>
         </div>
     </div>
-    <div id="endQuizContent" style="display: none;">
+    <div class="endQuizContent" id="endQuizContent" style="display: none;">
         <p>Congrats on Finishing this lesson on Hydrogren</p>
         <div id="displayGrade"></div>
     </div>
