Added some more files like the hydrogen one

--- a/lessons.html
+++ b/lessons.html
@@ -52,14 +52,14 @@
                         <i class="fa fa-twitter fa-3x" aria-hidden="true"></i>
 
                         <div class="title">
-                            <h4>Topic2</h4>
+                            <h4>Oxygen</h4>
                         </div>
 
                         <div class="text">
                             <span>question2</span>
                         </div>
 
-                        <a href="#">Continue to Lesson</a>
+                        <a href="oxygen.html">Continue to Lesson</a>
 
                     </div>
                 </div>
@@ -71,14 +71,14 @@
                         <i class="fa fa-facebook fa-3x" aria-hidden="true"></i>
 
                         <div class="title">
-                            <h4>Topic3</h4>
+                            <h4>Helium</h4>
                         </div>
 
                         <div class="text">
                             <span>question3</span>
                         </div>
 
-                        <a href="#">Continue to Lesson</a>
+                        <a href="helium.html">Continue to Lesson</a>
 
                     </div>
                 </div>
@@ -90,14 +90,14 @@
                         <i class="fa fa-pinterest-p fa-3x" aria-hidden="true"></i>
 
                         <div class="title">
-                            <h4>Topic4</h4>
+                            <h4>Carbon</h4>
                         </div>
 
                         <div class="text">
                             <span>question4</span>
                         </div>
 
-                        <a href="#">Continue to Lesson</a>
+                        <a href="carbon.html">Continue to Lesson</a>
 
                     </div>
                 </div>
@@ -109,14 +109,14 @@
                         <i class="fa fa-google-plus fa-3x" aria-hidden="true"></i>
 
                         <div class="title">
-                            <h4>Topic5</h4>
+                            <h4>Nitrogen</h4>
                         </div>
 
                         <div class="text">
                             <span>question5</span>
                         </div>
 
-                        <a href="#">Continue to Lesson</a>
+                        <a href="nitrogen.html">Continue to Lesson</a>
 
                     </div>
                 </div>
@@ -128,14 +128,14 @@
                         <i class="fa fa-github fa-3x" aria-hidden="true"></i>
 
                         <div class="title">
-                            <h4>Topic6</h4>
+                            <h4>Iron</h4>
                         </div>
 
                         <div class="text">
                             <span>question6</span>
                         </div>
 
-                        <a href="#">Continue to Lesson</a>
+                        <a href="iron.html">Continue to Lesson</a>
 
                     </div>
                 </div>
