--- a/lessons.html
+++ b/lessons.html
@@ -40,7 +40,7 @@
                             <span>question1</span>
                         </div>
 
-                        <a href="Lesson1_Hydrogen.html">Continue to Lesson</a>
+                        <a href="Hydrogen.html">Continue to Lesson</a>
 
                     </div>
                 </div>
