--- a/Hydrogen.html
+++ b/Hydrogen.html
@@ -86,7 +86,7 @@
         <p>Congrats on Finishing this lesson on Hydrogren</p>
         <div id="displayGrade"></div>
     </div>
-    <script src="quiz.js"></script>
+    <script src="quiz_hydrogen.js"></script>
 
 </body>
 
